# model/system/sys_user.go
@@ -8,7 +8,7 @@ import (
 type SysUser struct {
 	global.GvaModel
 	UUID     uuid.UUID `json:"uuid" gorm:"index;comment:用户UUID"`          // 用户UUID
-	Username string    `json:"userName" gorm:"index;comment:用户登录名"`       // 用户登录名
+	Username string    `json:"userName" gorm:"index;comment:用户登录名"`       // 用户账号-用户登录名
 	Password string    `json:"-"  gorm:"comment:用户登录密码"`                  // 用户登录密码
 	NickName string    `json:"nickName" gorm:"default:系统用户;comment:用户昵称"` // 用户昵称
 	Avatar   string    `json:"avatar" gorm:"default:null;comment:用户头像"`   // 用户头像
